--- a/src/blog.html
+++ b/src/blog.html
@@ -156,9 +156,9 @@
                 <div class="col-10">
                     <article>
                         <div class="image">
-                            <figure>
+                            <figure class="is__loaded">
                                 <a href="/article.html">
-                                    <img src="./img/article_01.png" alt="alt">
+                                    <img src="" data-src="./img/article_01.png" alt="alt">
                                 </a>
                             </figure>
                         </div>
@@ -173,7 +173,7 @@
                         <div class="image">
                             <figure>
                                 <a href="/article.html">
-                                    <img src="./img/article_02.png" alt="alt">
+                                    <img src="" data-src="./img/article_02.png" alt="alt">
                                 </a>
                             </figure>
                         </div>
@@ -188,7 +188,7 @@
                         <div class="image">
                             <figure>
                                 <a href="/article.html">
-                                    <img src="./img/article_03.png" alt="alt">
+                                    <img src="" data-src="./img/article_03.png" alt="alt">
                                 </a>
                             </figure>
                         </div>
@@ -203,7 +203,7 @@
                         <div class="image">
                             <figure>
                                 <a href="/article.html">
-                                    <img src="./img/article_04.png" alt="alt">
+                                    <img src="" data-src="./img/article_04.png" alt="alt">
                                 </a>
                             </figure>
                         </div>
@@ -364,6 +364,7 @@
         </div>
     </footer>
 
+    <script src="js/jquery.3.3.1.min.js"></script>
     <script src="js/app.min.js"></script>
     </body>
 </html>
