--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,11 @@
         <div class="sticky__menu">
             <div class="container">
                 <div class="top__line">
-                    <svg class="icon menu">
-                        <use xlink:href="../img/symbols.svg#menu"></use>
-                    </svg>
+                    <a href="tel:89787547499" class="phone__svg">
+                        <svg class="phone">
+                            <use xlink:href="./img/symbols.svg#phone"></use>
+                        </svg>
+                    </a>
                     <div class="logo">
                         <a href="/">
                             <img class="desktop__logo" src="./img/logo_white.svg" data-green-logo="./img/logo_green.svg" alt="logo">
@@ -47,6 +49,9 @@
                                 <ul>
                                     <li>
                                         <a href="/uslugi.html">Создание сайта</a>
+                                        <span>
+                                            <i></i>
+                                        </span>
                                         <ul>
                                             <li><a href="/usluga.html">индивидуальный проект</a></li>
                                             <li><a href="/usluga.html">сайт-визитка</a></li>
@@ -59,6 +64,9 @@
                                     </li>
                                     <li>
                                         <a href="/uslugi.html">Техническая поддержка</a>
+                                        <span>
+                                            <i></i>
+                                        </span>
                                         <ul>
                                             <li><a href="#">домен-хотинг</a></li>
                                             <li><a href="#">seo-аудит</a></li>
@@ -68,6 +76,9 @@
                                     </li>
                                     <li>
                                         <a href="/uslugi.html">Сопровождение сайта</a>
+                                        <span>
+                                            <i></i>
+                                        </span>
                                         <ul>
                                             <li><a href="#">seo-продвижение</a></li>
                                             <li><a href="#">контекстная реклама</a></li>
@@ -82,11 +93,9 @@
                             <li class="active"><a href="/contacts.html">Контакты</a></li>
                         </ul>
                     </nav>
-                    <a href="tel:89787547499" class="phone__svg">
-                        <svg class="phone">
-                            <use xlink:href="./img/symbols.svg#phone"></use>
-                        </svg>
-                    </a>
+                    <svg class="icon menu">
+                        <use xlink:href="../img/symbols.svg#menu"></use>
+                    </svg>
                     <div class="phone__email">
                         <a href="tel:89787547499" title="Позвонить" class="phone__link">
                             <span>8 (978) 754-74-99</span>
@@ -120,12 +129,25 @@
         </div>
     </header>
 
-    <section class="services">
+    <section class="main__text">
         <div class="container">
             <div class="row">
                 <div class="col-10">
                     <div class="step">01</div>
-                    <div class="as__h1">Наши услуги</div>
+                    <h1>Создание и продвижение сайтов в Крыму и Краснодарском крае</h1>
+                    <p>Разрабатываем сайты по всему Крыму: Симферополь, Ялта, Евпатория, Алушта, Саки, Керчь, Джанкой. Работаем в Краснодарском крае и по всей России. Настраиваем контекстную рекламу и занимаемся продвижением сайтов. Ознакомиться с полным перечнем услуг, а также заказать консультацию, Вы можете на нашем сайте.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-10">
+                    <div class="step">02</div>
+
+                    <h2 class="as__h1">Наши услуги</h2>
 
                     <div class="services__list">
                         <div class="services__list-item is__open">
@@ -250,8 +272,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-10">
-                    <div class="step">02</div>
-                    <div class="as__h1">Почему мы</div>
+                    <div class="step">03</div>
+                    <h2 class="as__h1">Почему мы</h2>
                     <div class="why__we-list">
                         <div class="why__we-list-item">
                             <svg class="icon opit_v_razrabotke">
@@ -305,8 +327,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-10">
-                    <div class="step">03</div>
-                    <div class="as__h1">Отзывы клиентов</div>
+                    <div class="step">04</div>
+                    <h3 class="as__h1">Отзывы клиентов</h3>
 
                     <div class="owl-carousel owl-theme">
                         <div class="item">
@@ -349,7 +371,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-10">
-                    <div class="step">04</div>
+                    <div class="step">05</div>
                     <div class="as__h1">Портфолио</div>
                     <div class="info">Работы нашей веб-студии, разработанные сайты, полезные кейсы.</div>
 
@@ -480,7 +502,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-10">
-                    <div class="step">05</div>
+                    <div class="step">06</div>
                     <div class="as__h1">Мы работаем</div>
                     <div class="info">Инструменты, которые мы используем для анализа и увеличения эффективности работы сайта.</div>
                     <div class="we__work-list">
@@ -577,6 +599,11 @@
                                     </svg>
                                 </a>
                                 <a href="#">
+                                    <svg class="icon telegram">
+                                        <use xlink:href="./img/symbols.svg#whatsapp"></use>
+                                    </svg>
+                                </a>
+                                <a href="#">
                                     <svg class="icon viber">
                                         <use xlink:href="./img/symbols.svg#viber"></use>
                                     </svg>
@@ -619,6 +646,7 @@
                             <img src="./img/logo_green.svg" class="logo__green" alt="logo">
                             <div class="copyright">
                                 2017 - 2018 © Создание и раскрутка сайтов. ООО «Красбер», ИНН 9106013479
+                                <p>Вся информация, представленная на сайте, носит информационный характер и ни при каких условиях не является публичной офертой.</p>
                             </div>
                         </div>
                         <div class="col__service">
@@ -672,6 +700,7 @@
             Спасибо! Ваша зявка отправлена и находится в обработке.
         </div>
     </div>
+    <script src="js/jquery.3.3.1.min.js"></script>
     <script src="js/app.min.js"></script>
     </body>
 </html>
