--- a/src/usluga.html
+++ b/src/usluga.html
@@ -122,54 +122,81 @@
                 <div class="col-10">
                     <h2>Что важно в интернет магазине?</h2>
                     <p>Что под этим подразумеваем: большое количество дублей страниц, которые уже проиндексировал поисковик, непонятная иерархия страниц, отсутствие карты сайта, большое количество битых ссылок, сайт часто недоступен, много вплывающей рекламы.</p>
-                    <p>Поскольку главная задача сайта – это заинтересовать посетителя и перевести в список потенциальных клиентов, то созданием интернет-ресурса должен заниматься профессионал. Множество шаблонов во всемирной паутине дают возможность рядовому пользователю создать сайт буквально в течение нескольких минут. Но без грамотного оформления и оптимизации данных такой ресурс останется «пустышкой» и не принесет прибыли. Основными функциями сайта можно считать: имидж; коммуникация; реклама; информативность; маркетинг. Потенциальный покупатель должен понять, чем занимается компания, поэтому следует предоставить максимальное количество информации на сайте.</p>
-                    <h2>Почему стоит заказать создание сайта в студии "Красбер"?</h2>
-                    <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками. Чтобы оперативно информировать пользователей о новых товарах и услугах, следует позаботиться о привлекательном дизайне. С помощью акций и опросов можно осуществлять продажи в режиме онлайн. Анализируя вопросы, которые задают покупатели, можно понять, на какую группу товаров есть спрос или какой информации не хватает на сайте. Благодаря размещению тематических статей, сертификатов, отзывов, вы получите полноценный сайт для развития бизнеса.</p>
 
-                    <table>
-                        <tbody>
-                        <tr>
-                            <td>
-                                <p>Оценка проекта</p>
-                            </td>
-                            <td>
-                                <p>Подбираем доменное имя и хостинг</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>Разработка макетов страниц</p>
-                            </td>
-                            <td>
-                                <p>Написание и согласование ТЗ (технического задания)</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>Выбор дизайна сайта и его выполнение</p>
-                            </td>
-                            <td>
-                                <p>Подключение административной панели и согласование ее возможностей</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>Настройка и подключение дополнительных модулей</p>
-                            </td>
-                            <td>
-                                <p>Выполнение сео-требований для сайта</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <p>Тестирование и проверка</p>
-                            </td>
-                            <td>
-                                <p>Сдача проекта</p>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
+                    <div class="row attached__portfolio">
+                        <div class="col-4">
+                            <div class="image">
+                                <img src="./img/portfolio_preview-05.png" alt="" title="">
+                            </div>
+                            <a href="#" class="title">Создание сайта-каталога новостроек в Тюмени</a>
+                            <div class="desc">
+                                <div class="name">Создание сайта-каталога новостроек в Тюмени</div>
+                                <ul>
+                                    <li>адаптивная верстка и CMS</li>
+                                    <li>настройка поддоменов жилищных комплексов</li>
+                                    <li>ипотечный калькулятор</li>
+                                </ul>
+                                <div class="tags">
+                                    <span>верстка</span>
+                                    <span>CMS</span>
+                                    <span>сайт-каталог</span>
+                                </div>
+                                <div class="link__more">
+                                    <div class="link__more-text">
+                                        <a href="#">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="image">
+                                <img src="/img/portfolio_preview-04.png" alt="" title="">
+                            </div>
+                            <a href="#" class="title">Разработка сайта-каталога автозапчастей</a>
+                            <div class="desc">
+                                <div class="name">Разработка сайта-каталога автозапчастей</div>
+                                <ul>
+                                    <li>верстка и подключение CMS</li>
+                                    <li>расширенный поиск по сайту</li>
+                                    <li>возможность выбора города</li>
+                                </ul>
+                                <div class="tags">
+                                    <span>верстка</span>
+                                    <span>CMS</span>
+                                    <span>сайт-каталог</span>
+                                </div>
+                                <div class="link__more">
+                                    <div class="link__more-text">
+                                        <a href="#">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row price__time-container">
+                        <div class="col-6">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab architecto at cum debitis deleniti, dolor dolore, doloribus ducimus, eius exercitationem facere fugit illo iste labore nisi nostrum quaerat quisquam unde?</p>
+                        </div>
+                        <div class="col-6">
+                            <div class="price__time">
+                                <div class="icons">
+                                    <svg class="ruble">
+                                        <use xlink:href="./img/symbols.svg#ruble"></use>
+                                    </svg>
+                                    <svg class="clock">
+                                        <use xlink:href="./img/symbols.svg#clock"></use>
+                                    </svg>
+                                </div>
+                                <ul>
+                                    <li>Landing page</li>
+                                    <li>Сайт-каталог</li>
+                                    <li>Интернет-магазин</li>
+                                </ul>
+                                <p>С помощью рекламы можно рассказать о сервисах, услугах, товарах, а форма обратной связи служит для общения с заказчиками.</p>
+                            </div>
+                        </div>
+                    </div>
 
                     <h3>FAQ</h3>
                     <ul class="faq">
@@ -700,6 +727,7 @@
     </div>
     <div class="popup__show-bg"></div>
 
+    <script src="js/jquery.3.3.1.min.js"></script>
     <script src="js/app.min.js"></script>
     </body>
 </html>
