--- a/src/uslugi.html
+++ b/src/uslugi.html
@@ -300,7 +300,7 @@
                                 <div class="col-4">
                                     <div class="image">
                                         <svg class="icon">
-                                            <use xlink:href="./img/symbols.svg#usable_audit"></use>
+                                            <use xlink:href="./img/symbols.svg#sajt_katalog"></use>
                                         </svg>
                                     </div>
                                 </div>
@@ -326,7 +326,7 @@
                                 <div class="col-4">
                                     <div class="image">
                                         <svg class="icon">
-                                            <use xlink:href="./img/symbols.svg#domain_hosting"></use>
+                                            <use xlink:href="./img/symbols.svg#website"></use>
                                         </svg>
                                     </div>
                                 </div>
@@ -345,7 +345,7 @@
                                 <div class="col-4">
                                     <div class="image">
                                         <svg class="icon">
-                                            <use xlink:href="./img/symbols.svg#yandex_direct"></use>
+                                            <use xlink:href="./img/symbols.svg#shop"></use>
                                         </svg>
                                     </div>
                                 </div>
@@ -373,6 +373,82 @@
                                         <a class="title">Корпоративный сайт</a>
                                         <p>Сайт - визитная карточка Вашего бизнеса на просторах интернета.  Сайт - визитная карточка Вашего бизнеса на просторах интернета.</p>
                                         <div class="price">от 18 000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#html-coding"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Вёрстка дизайна</a>
+                                        <p>Корректное отображение сайта в разных браузерах обеспечит профессиональная вёрстка макетов дизайна.</p>
+                                        <div class="price">от 5 000 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#copywriter"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">SEO-копирайтинг</a>
+                                        <p>Корректное отображение сайта в разных браузерах обеспечит профессиональная вёрстка макетов дизайна.</p>
+                                        <div class="price">от 500 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#module"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Дополнительные модули</a>
+                                        <p>Корректное отображение сайта в разных браузерах обеспечит профессиональная вёрстка макетов дизайна.</p>
+                                        <div class="price">от 2 500 р.</div>
+                                        <a href="#" class="btn green">ПОДРОБНЕЕ</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="list__items-item2">
+                            <div class="row">
+                                <div class="col-4">
+                                    <div class="image">
+                                        <svg class="icon">
+                                            <use xlink:href="./img/symbols.svg#usable_audit"></use>
+                                        </svg>
+                                    </div>
+                                </div>
+                                <div class="col-8">
+                                    <div class="body">
+                                        <a class="title">Дополнительные модули</a>
+                                        <p>Корректное отображение сайта в разных браузерах обеспечит профессиональная вёрстка макетов дизайна.</p>
+                                        <div class="price">от 2 500 р.</div>
                                         <a href="#" class="btn green">ПОДРОБНЕЕ</a>
                                     </div>
                                 </div>
@@ -547,6 +623,7 @@
         </div>
     </footer>
 
+    <script src="js/jquery.3.3.1.min.js"></script>
     <script src="js/app.min.js"></script>
     </body>
 </html>
