--- a/src/portfolio-item.html
+++ b/src/portfolio-item.html
@@ -327,6 +327,7 @@
         </div>
     </footer>
 
+    <script src="js/jquery.3.3.1.min.js"></script>
     <script src="js/app.min.js"></script>
     </body>
 </html>
