--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
         <title>Krasber new</title>
+        <link rel="shortcut icon" href="../img/favicons/favicon.ico" type="image/x-icon">
+        <link rel="icon" sizes="16x16" href="../img/favicons/favicon-16x16.png" type="image/png">
+        <link rel="icon" sizes="32x32" href="../img/favicons/favicon-32x32.png" type="image/png">
+        <link rel="apple-touch-icon-precomposed" href="../img/favicons/apple-touch-icon-precomposed.png">
+        <link rel="apple-touch-icon" href="../img/favicons/apple-touch-icon.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="../img/favicons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="../img/favicons/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="../img/favicons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="../img/favicons/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="../img/favicons/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="../img/favicons/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="../img/favicons/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="../img/favicons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="167x167" href="../img/favicons/apple-touch-icon-167x167.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="../img/favicons/apple-touch-icon-180x180.png">
+        <link rel="apple-touch-icon" sizes="1024x1024" href="../img/favicons/apple-touch-icon-1024x1024.png">
         <link rel="stylesheet" href="css/app.min.css">
     </head>
     <body>
@@ -37,7 +53,7 @@
                     </a>
                     <div class="logo">
                         <a href="/">
-                            <img class="desktop__logo" src="./img/logo_white.svg" data-green-logo="./img/logo_green.svg" alt="logo">
+                            <img class="desktop__logo" src="./img/logo_white.svg" alt="logo">
                             <img class="mobile__logo" src="./img/logo_green.svg" alt="logo">
                         </a>
                     </div>
@@ -113,8 +129,9 @@
                     <div class="row align__items-center">
                         <div class="col-6">
                             <div class="slogan__box">
-                                <p>Комплексное<br />сопровождение сайта<br />от ТЗ до ТОП!</p>
-                                <a href="#" class="btn black">Заказать сайт</a>
+                                <p>Создаем продающие<br /> сайты более 3 лет</p>
+                                <span>Сделаем сайт для Вашего<br />бизнеса за 7 рабочих дней.<br />Домен в подарок!</span>
+                                <a href="#" class="btn white">Рассчитать стоимость сайта</a>
                             </div>
                             <!-- /.slogan__box -->
                         </div>
